# goit_homework_M2T7_V1

./: README.md  config.ini  main.py  pyproject.toml
conf/: db.py  models.py
migrations/versions/: d40a32ac25dc_init.py
